--- a/miniprogram/pages/home/home.wxml
+++ b/miniprogram/pages/home/home.wxml
@@ -10,7 +10,7 @@
     <!-- 单词听写功能卡片 -->
     <view class="feature-card">
       <view class="feature-icon">
-        <t-icon name="check-circle" size="48rpx" color="#ffffff" />
+        <text class="emoji-icon">✅</text>
       </view>
       <view class="feature-content">
         <view class="feature-title">单词听写</view>
@@ -35,7 +35,7 @@
     <!-- 即将推出功能 -->
     <view class="feature-card disabled">
       <view class="feature-icon disabled">
-        <t-icon name="calculation" size="48rpx" color="#cccccc" />
+        <text class="emoji-icon disabled">🧮</text>
       </view>
       <view class="feature-content">
         <view class="feature-title">数学口算</view>
@@ -54,7 +54,7 @@
 
     <view class="feature-card disabled">
       <view class="feature-icon disabled">
-        <t-icon name="book" size="48rpx" color="#cccccc" />
+        <text class="emoji-icon disabled">📚</text>
       </view>
       <view class="feature-content">
         <view class="feature-title">阅读理解</view>
