--- a/miniprogram/pages/profile/profile.wxml
+++ b/miniprogram/pages/profile/profile.wxml
@@ -2,18 +2,25 @@
   <!-- 用户信息卡片 -->
   <view class="user-section" wx:if="{{userInfo}}">
     <view class="user-card">
-      <t-avatar 
-        size="large" 
-        image="{{userInfo.avatarUrl || ''}}"
-        class="user-avatar"
-      >
-        {{userInfo.nickName ? userInfo.nickName.charAt(0) : '用'}}
-      </t-avatar>
-      <view class="user-info">
+      <!-- 编辑按钮 -->
+      <view class="edit-profile-btn" bind:tap="editProfile">
+        <text class="edit-icon">✏️</text>
+      </view>
+      
+      <!-- 用户基本信息 - 居中布局 -->
+      <view class="user-basic-info">
+        <t-avatar 
+          size="large" 
+          image="{{userInfo.avatarUrl || ''}}"
+          class="user-avatar"
+        >
+          {{userInfo.nickName ? userInfo.nickName.charAt(0) : '用'}}
+        </t-avatar>
         <view class="user-name">{{userInfo.nickName || '用户'}}</view>
         <view class="user-desc">{{userInfo.grade || '小学生'}}</view>
       </view>
       
+      <!-- 用户统计数据 -->
       <view class="user-stats">
         <view class="stat-item">
           <view class="stat-number">{{studyStats.totalPractices}}</view>
@@ -57,10 +64,10 @@
         wx:key="index"
         title="{{item.title}}"
         description="{{item.description}}"
-        right-icon="chevron-right"
         bind:click="viewRecord"
         data-index="{{index}}"
       >
+        <view slot="right-icon" class="cell-arrow">></view>
         <view slot="note" class="record-score">
           <view class="score-text">{{item.accuracy}}%</view>
           <view class="score-label">正确率</view>
@@ -78,10 +85,10 @@
         wx:key="index"
         title="{{item.word}}"
         description="错误次数: {{item.errorCount}}次"
-        right-icon="chevron-right"
         bind:click="practiceWrongWord"
         data-word="{{item.word}}"
       >
+        <view slot="right-icon" class="cell-arrow">></view>
         <view slot="left-icon">
           <t-tag 
             size="small" 
@@ -100,34 +107,119 @@
     <t-cell-group>
       <t-cell 
         title="学习统计" 
-        left-icon="chart-bar" 
-        right-icon="chevron-right"
         bind:click="viewStatistics"
-      />
+      >
+        <view slot="left-icon" class="menu-icon">📊</view>
+        <view slot="right-icon" class="cell-arrow">></view>
+      </t-cell>
       <t-cell 
         title="设置" 
-        left-icon="setting" 
-        right-icon="chevron-right"
         bind:click="openSettings"
-      />
+      >
+        <view slot="left-icon" class="menu-icon">⚙️</view>
+        <view slot="right-icon" class="cell-arrow">></view>
+      </t-cell>
       <t-cell 
         title="帮助与反馈" 
-        left-icon="help-circle" 
-        right-icon="chevron-right"
         bind:click="openHelp"
-      />
+      >
+        <view slot="left-icon" class="menu-icon">❓</view>
+        <view slot="right-icon" class="cell-arrow">></view>
+      </t-cell>
       <t-cell 
         title="退出登录" 
-        left-icon="logout" 
-        right-icon="chevron-right"
         bind:click="logout"
-      />
+      >
+        <view slot="left-icon" class="menu-icon">🚪</view>
+        <view slot="right-icon" class="cell-arrow">></view>
+      </t-cell>
     </t-cell-group>
   </view>
 </view>
 
-<!-- Toast 组件 -->
-<t-toast id="t-toast" />
+<!-- 用户信息编辑弹窗 -->
+<t-popup 
+  visible="{{showEditModal}}" 
+  bind:visible-change="onEditModalChange"
+  placement="center"
+  show-overlay="{{true}}"
+  class="edit-modal"
+>
+  <view class="edit-modal-content">
+    <view class="edit-modal-header">
+      <view class="edit-modal-title">编辑个人信息</view>
+      <view class="edit-modal-close" bind:tap="closeEditModal">✕</view>
+    </view>
+    
+    <view class="edit-form">
+      <!-- 头像编辑 -->
+      <view class="edit-item">
+        <view class="edit-label">头像</view>
+        <view class="avatar-edit" bind:tap="chooseAvatar">
+          <t-avatar 
+            size="large" 
+            image="{{editUserInfo.avatarUrl || ''}}"
+            class="edit-avatar"
+          >
+            {{editUserInfo.nickName ? editUserInfo.nickName.charAt(0) : '用'}}
+          </t-avatar>
+          <view class="avatar-edit-tip">点击更换头像</view>
+        </view>
+      </view>
+      
+      <!-- 昵称编辑 -->
+      <view class="edit-item">
+        <view class="edit-label">昵称</view>
+        <t-input 
+          value="{{editUserInfo.nickName}}"
+          placeholder="请输入昵称"
+          bind:change="onNickNameChange"
+          maxlength="20"
+          class="edit-input"
+        />
+      </view>
+      
+      <!-- 学年编辑 -->
+      <view class="edit-item">
+        <view class="edit-label">学年</view>
+        <t-picker 
+          value="{{editUserInfo.grade}}"
+          data-key="grade"
+          options="{{gradeOptions}}"
+          bind:change="onGradeChange"
+          class="edit-picker"
+        >
+          <t-input 
+            value="{{editUserInfo.grade}}"
+            placeholder="请选择学年"
+            readonly
+            suffix-icon="chevron-down"
+            class="edit-input"
+          />
+        </t-picker>
+      </view>
+    </view>
+    
+    <view class="edit-modal-buttons">
+      <t-button 
+        theme="default" 
+        size="large"
+        bind:tap="closeEditModal"
+        class="modal-btn"
+      >
+        取消
+      </t-button>
+      <t-button 
+        theme="primary" 
+        size="large"
+        bind:tap="saveUserInfo"
+        class="modal-btn"
+      >
+        保存
+      </t-button>
+    </view>
+  </view>
+</t-popup>
 
-<!-- Dialog 组件 -->
-<t-dialog id="t-dialog" /> 
+<!-- Toast 组件 -->
+<t-toast id="t-toast" /> 
